# backend-coding-challenge

./: Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt
gistapi/: gistapi.py  utils.py
gistapi/exception_handlers/: custom_exception.py  exception_handlers.py  file_content_fetch_exception.py  invalid_input_exception.py  user_not_found_exception.py
gistapi/tests/: conftest.py  test_gistapi.py
