[tool.poetry]
name = "gistsearchapp"
version = "0.1.0"
description = "The app provides api, which returns gists which matches specific provided pattern for given user"
authors = ["Shailesh Nandkule <snandkule@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.2"
werkzeug = "2.2.2"
pytest = "^7.4.3"
requests = "2.28.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
